# fuzzyset-haskell

./: .gitignore  LICENSE  README.md  fourmolu.yaml  fuzzyset.cabal  package.yaml  simple.cabal  stack.yaml
app/: Main.hs
refactor/: LICENSE  README.md  fuzzyset.cabal  package.yaml
refactor/app/: Main.hs
refactor/src/Data/: FuzzySet.hs
refactor/src/Data/FuzzySet/: Internal.hs  Types.hs  Util.hs
refactor/test/: Helpers.hs  Spec.hs
src/Data/: FuzzySet.hs
src/Data/FuzzySet/: FuzzySearch.hs  Internal.hs  Lens.hs  Monad.hs  Simple.hs  Types.hs  Util.hs  Utils.hs
test/: Helpers.hs  Spec.hs
