name:                fuzzyset
version:             0.1.0.0
synopsis:            Fuzzy string set implementation in Haskell
description:         A data structure for approximate string matching, based on fuzzyset.js.
homepage:            https://github.com/laserpants/fuzzyset-haskell
license:             BSD3
license-file:        LICENSE
author:              Johannes Hildén
maintainer:          hildenjohannes@gmail.com
copyright:           2017 Johannes Hildén
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Data.FuzzySet
                     , Data.FuzzySet.Internal
                     , Data.FuzzySet.Lens
                     , Data.FuzzySet.Types
                     , Data.FuzzySet.Util
  build-depends:       base >= 4.7 && < 5
                     , base-unicode-symbols ==0.2.2.4
                     , lens ==4.15.4
                     , text ==1.2.2.2
                     , text-metrics ==0.3.0
                     , unordered-containers ==0.2.8.0
                     , vector ==0.12.0.1
  default-language:    Haskell2010

executable fuzzyset-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , fuzzyset
  default-language:    Haskell2010

test-suite fuzzyset-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , base-unicode-symbols ==0.2.2.4
                     , hspec ==2.4.4
                     , fuzzyset
                     , lens ==4.15.4
                     , text ==1.2.2.2
                     , ieee754 ==0.8.0
                     , unordered-containers ==0.2.8.0
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/laserpants/fuzzyset-haskell
