name:                simple
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/simple#readme
license:             BSD3
license-file:        LICENSE
author:              Johannes Hildén
maintainer:          hildenjohannes@gmail.com
copyright:           2017 Johannes Hildén
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Data.FuzzySet
                     , Data.FuzzySet.Lens
                     , Data.FuzzySet.Util
  build-depends:       base >= 4.7 && < 5
                     , base-unicode-symbols ==0.2.2.4
                     , text ==1.2.2.2
  default-language:    Haskell2010

executable simple-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , simple
  default-language:    Haskell2010

test-suite simple-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , simple
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/simple
